[package]
name = "barril"
version = "0.1.0"
description = "An async implementation of bitcask"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.6.0"
futures-lite.workspace = true
thiserror.workspace = true
async-fs = "2.1.2"
crc = "3.2.1"
chrono = "0.4.38"
hashbrown = "0.14.5"
[lints]
workspace = true

[dev-dependencies]
smol = "2.0.0"
smol-potat = "1.1.2"
