[package]
name = "barril"
version = "0.1.0"
description = "An async implementation of bitcask"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1.6.0"
futures-lite.workspace = true
thiserror.workspace = true
async-fs = "2.1.2"
[lints]
workspace = true
